# bike-rotor-sensor

./: .gitattributes  .gitmodules  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/: software.yml
.github/workflows/: hardware.yml  software.yml  system.yml
hardware/: .gitignore  local.dcm  local.lib  rotor-sensor-cache.lib  rotor-sensor.kicad_pcb  rotor-sensor.pro  rotor-sensor.sch
hardware/config/: mechanics.yaml  outputs.yaml  panel.json
hardware/design/: .gitignore  (+3 more)
software/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flash.py  monitor.py
software/config/: development-analog.cmake  development-digital.cmake  external-optical-digital.cmake  internal-optical-analog-iref.cmake  internal-optical-analog-vref.cmake  internal-optical-digital.cmake  network.json
software/docs/: CMakeLists.txt  conf.py  index.rst  requirements.txt
software/docs/arch/: block-view.rst  deployment-view.rst  index.rst  package-view.rst  scope-view.rst
software/docs/arch/diagrams/: block-view.drawio  overview.c4puml  package-view.drawio
software/docs/config/: variants.rst
software/docs/design/: clock.rst  communication.rst  device_config.rst  index.rst  inertial_estimator.rst  itpms_service.rst  measurement.rst  output_stage.rst  ride_logs.rst  sensor_control.rst  speed_monitor.rst  tasks.rst
software/docs/design/communication/: diagnostics.rst  protocol.rst
software/docs/design/diagrams/: clock-config.drawio  clock_config.drawio
software/docs/design/scripts/: pressure.py
software/docs/design/sensor/: sensor-timing-calculations.ipynb  spe.rst
software/docs/fmea/: index.rst  itpms.rst  sensors.rst
software/docs/reqs/: activity.rst  index.rst  measurement.rst  output_stage.rst  signals.rst
software/gencode/: metainfo.h
software/include/app/: alt.h  altitude.h  cadence.h  comm.h  config.h  current.h  diagnostics.h  distance.h  feature.h  gear.h  iet.h  imu.h  init.h  itpms.h  metainfo.h.in  osh.h  ride.h  ridelogs.h  sch.h  sec.h  spe.h  speed.h  spm.h  sys_state.h  volt.h
software/include/bsp/: bmi088.h  bmp581.h  board.h  config.h  osh_phy.h  osh_phy_internal.h  osh_sensor.h  pinout.h  sensor.h  sensor_internal.h  sensor_tle4942.h  uart.h  usart.h
software/include/common/: ringbuffer.h
software/include/hal/: evsys.h  gpio.h  nvic.h  pm.h  sercom_usart.h  sysctrl.h  tc.h
software/ld/: ATSAMD21E18A.ld  application.ld  application_nobl.ld
software/profiles/: ap22802.cmake  max9621.cmake
software/sensor-app/: CMakeLists.txt
software/sensor-app/config/: signals.json
software/sensor-app/include/app/: config.h  data.h  init.h  signals.h
software/sensor-app/include/sensor/: common.h  dsa.h  pse.h  spe.h
software/sensor-app/ld/: application-bootloader.ld
software/sensor-app/src/: data.c  dsa.c  init.c  main.c  pse.c  signals.c  spe.c  tasks.c
software/sensor-app/test/hil/: README.md
software/sensor-app/test/sil/: CMakeLists.txt
software/sensor-app/test/sil/src/: test_sensor.cpp
software/sensor-app/test/unit/: CMakeLists.txt
software/sensor-app/test/unit/src/: test_dsa.cpp  test_pse.cpp
software/sensor-bootloader/: CMakeLists.txt
software/sensor-bootloader/api/bootloader/: bootloader.h  memory.h
software/sensor-bootloader/include/bootloader/: bootloader_internal.h  flash_util.h  usart_drv.h
software/sensor-bootloader/ld/: bootloader.ld  memory.ld
software/sensor-bootloader/src/: bootloader.c  flash_util.c  init.c  main.c  tasks.c  usart_drv.c
software/sensor-bsp/: CMakeLists.txt  README.md
software/sensor-bsp/api/board/: board.h  ish.h  osh.h  pins.h
software/sensor-bsp/include/board/: ish_internal.h
software/sensor-bsp/src/: board.c  ish.c  ish_analog.c  ish_digital.c  osh.c
software/sensor-lib/: CMakeLists.txt
software/sensor-lib/api/sensor/: dsa.h  pse.h  spe.h
software/sensor-lib/src/: pse.c
software/sensor-lib/test/unit/: CMakeLists.txt
software/sensor-lib/test/unit/src/: test_pse.cpp
software/src/app/: alt.c  altitude.c  cadence.c  comm.c  config.c  current.c  diagnostics.c  distance.c  gear.c  iet.c  imu.c  init.c  itpms.c  main.c  osh.c  ride.c  ridelogs.c  sch.c  sec.c  speed.c  spm.c  startup.c  sys_state.c  tasks.c  volt.c
software/src/bsp/: bmi088.c  bmp581.c  board.c  osh_ap22802.c  osh_max9621.c  osh_phy.c  sensor.c  sensor_generic.c  sensor_tle5045.c  uart.c  usart.c
software/src/hal/: eic.c  evsys.c  gpio.c  nvic.c  pm.c  sercom0_usart.c  sercom_usart.c  sysctrl.c  tc.c  tcc.c
software/tests/pytest/: conftest.py  test_Bootloader.feature  test_LineTransmission.feature  test_OperationStatus.feature  test_PowerStatus.feature  test_SensorControl.feature  test_SleepWakeup.feature  test_root.py
software/tests/sil/: CMakeLists.txt  sil_client.py
software/tests/sil/server/: rotor_sensor.capnp  server.cpp
software/tests/sil/stubs/: bmp5.c  sam.h
software/tests/unit/: CMakeLists.txt  test_Altitude.cpp
software/tiny-hal/: CMakeLists.txt
software/tiny-hal/api/hal/: ac.h  adc.h  clkctrl.h  cpu.h  cpuint.h  crcscan.h  evsys.h  nvmctrl.h  port.h  portmux.h  rstctrl.h  rtc.h  sch.h  slpctrl.h  sys.h  tca.h  tcb.h  usart.h  vref.h  wdt.h
software/tiny-hal/fake/: CMakeLists.txt
software/tiny-hal/fake/include/tiny_sil/: peripheral.hpp  sch.hpp  scheduler.hpp  wdt.hpp
software/tiny-hal/fake/src/: peripheral.cpp  sch.cpp  scheduler.cpp  wdt.cpp
software/tiny-hal/src/: ac.c  adc.c  clkctrl.c  cpu.c  cpuint.c  crcscan.c  evsys.c  nvmctrl.c  port.c  portmux.c  rstctrl.c  rtc.c  sch.c  slpctrl.c  sys.c  tca.c  tcb.c  usart.c  vref.c  wdt.c
software/tools/: requirements.txt
software/tools/bootloader/: boot_config.json  bootloader_with_crc.hex
software/tools/cmake/: application.cmake  avr-toolchain.cmake  gcc-lto.cmake
software/tools/line/: debug.json  line_codegen.json  uds_codegen.json  uds_profile.json
software/tools/openocd/: .gitignore  factory-flash.cfg
software/tools/signal-rpc/: README.md  gen.py
software/tools/signal-rpc/templates/: signal_api.h.jinja2  signals.c.jinja2
system/: .gitignore  CMakeLists.txt  CMakePresets.json
(+140 files in other folders)
